got rid of some imports and warnings

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
             <version>${javafx.version}</version>
+            <transitive>true</transitive>
         </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
